# sphinx-reloader

./: .gitignore  README.md  license  setup.cfg  setup.py
sphinx_reloader/: __init__.py  sphinx_reloader.py
src/: doc_server.py  globals.py  reloader.py  sphinx_reloader.py
