[metadata]
name = sphinx-reloader
version = 0.0.1
author = Ruckshan Hendry Ratnam
author_email = hendryratnam@gmail.com
description = something small
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    setuptools>=42
    wheel
    sphinx
    watchdog

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    sphinx-reloader = src.sphinx-reloader:main