[metadata]
name = sphinx-reloader
version = attr: src.__VERSION__
author = Ruckshan Hendry Ratnam
author_email = hendryratnam@gmail.com
description = "A reloader for when writing documentation using Sphinx"
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/lowmoney/sphinx-reloader

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    setuptools>=42
    wheel
    sphinx
    watchdog

[options.entry_points]
console_scripts = 
    sphinx-reloader = src.sphinx_reloader:main